generate random data

--- a/SomethingUI/ClientApp/src/app/create-data/create-data.component.html
+++ b/SomethingUI/ClientApp/src/app/create-data/create-data.component.html
@@ -1,6 +1,6 @@
 <h1 id="tableLabel">Something Random</h1>
 
-<p>Create data.</p>
+<p>Generate random data.</p>
 
 <p *ngIf="!somethings"><em>Loading...</em></p>
 
